GNOME Bugzilla – Bug 679807
flacparse: check_valid_frame fails on valid flac file
Last modified: 2012-07-13 13:35:10 UTC
I have a flac file that checks out as valid with "flac -t" and plays in mplayer (ffmpeg / libavcodec audio decoder) without issue, but that fails in gstreamer flac decoders. This happens both on 0.10.x git head ( jhbuild ) and released ( Fedora 17 current ) The error is around 2 minutes into the song: [spider@Waves]~% totem 01\ -\ Drag\ Ropes.flac 0:02:07.941712438 13642 0x1a26320 ERROR flacparse gstflacparse.c:785:gst_flac_parse_check_valid_frame:<flacparse0> Giving up on invalid frame (65536 bytes)
Too big to upload, putting it temporarily at : http://www.skuggor.se/files/gst-breaks.flac
commit 32cddf61d02ec0538342e9def0c5d37f44ea9ee6 Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk> Date: Fri Jul 13 14:43:31 2012 +0200 flacparse: avoid some more frame misparsing by additional header sanity check ... using a required constant blocking_strategy bit. https://bugzilla.gnome.org/show_bug.cgi?id=679807