flacparse: avoid some more frame misparsing by additional header sanity check

... using a required constant blocking_strategy bit.

https://bugzilla.gnome.org/show_bug.cgi?id=679807